@@ -1500,7 +1500,7 @@ INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) V
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1544, 'standard', 'fr', 'Fichier :');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1545, 'standard', 'fr', 'Modèle de page');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1546, 'standard', 'fr', 'Sites :');
-INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1547, 'standard', 'fr', 'Automne.locales = {\n	openPopup: 		''Ouvrir cette fenêtre dans une pop-up'',\n	closePopup: 		''La fenêtre principale d\\''Automne est fermée ... Merci de fermer cette fenêtre.'',\n	validateOptions: 		''Voir les options de validation'',\n	validate: 				''Valider'',\n	actionImpossible: 		''Action impossible'',\n	cantSubmitFormPage: 	''Vous ne pouvez pas soumettre un formulaire depuis une page non publique.'',\n	loadingError: 			''Erreur de traitement. Veuillez réessayer ou vous reconnecter ...'',\n	jsError: 				''Erreur de traitement Javascript. Veuillez réessayer ou vous reconnecter ...'',\n	jsonError: 				''Erreur de traitement JSon. Veuillez réessayer ou vous reconnecter ...'',\n	contactAdministrator:	''Si le problème persiste, veuillez contacter votre administrateur avec ces informations : '',\n	cannotCloseModalGroup: 	''Vous ne pouvez pas fermer cette fenêtre tant que des fenêtres dépendantes sont ouvertes. Veuillez les fermer d\\''abord.'',\n	noPageFounded: 			''Aucune page trouvée ...'',\n	noScript: 				''Aucun script en cours de traitement.'',\n	nScripts: 				''{0} scripts en cours de traitement.'',\n	//Page edition \n	rowDel:					''Supprimer cette rangée'',\n	rowDrag:				''Glisser-Déposer cette rangée'',\n	rowTop:					''Monter cette rangée en haut de la zone éditable'',\n	rowBottom:				''Descendre cette rangée en bas de la zone éditable'',\n	rowLeft:				''Passer cette rangée dans la zone éditable de gauche'',\n	rowRight:				''Passer cette rangée dans la zone éditable de droite'',\n	rowUp:					''Monter cette rangée d\\''un cran'',\n	rowDown:				''Descendre cette rangée d\\''un cran'',\n	csName:					''Zone de contenu :'',\n	rowType:				''Rangée de type : '',\n	newRow:					''Nouvelle Rangée'',\n	newRowTip:				''Ajouter une nouvelle rangée de contenu dans la page'',\n	blockDel:				''Supprimer le contenu de ce bloc.'',\n	blockModify:			''Modifier le contenu de ce bloc.'',\n	blockAdmin:				''Gérer les éléments employés par ce bloc de contenu.'',\n	blockValidate:			''Enregistrer le contenu'',\n	rowDeleteConfirm:		''Etes-vous sur de vouloir supprimer définitivement la rangée \\''{0}\\'' et tout son contenu ?'',\n	blockDeleteConfirm:		''Etes-vous sur de vouloir supprimer définitivement tout le contenu de ce bloc ?'',\n	csSelectRowAdd:			''Sélectionnez la rangée à ajouter : '',\n	csSelectRow:			''Sélectionnez ou recherchez la rangée ...'',\n	csClickToAdd:			''Cliquez pour ajouter une nouvelle rangée à cette position'',\n	csClickOnRed:			''Cliquez sur la zone rouge où vous souhaitez ajouter votre nouvelle rangée.'',\n	csCancelRowAdd:			''Annuler l\\''ajout d\\''une nouvelle rangée dans la page.'',\n	csAddRowToPosition:		''Ajouter la rangée sélectionnée à la position choisie dans la page.'',\n	options:				''Options'',\n	optionsDetail:			''Vous permet de controler les options d\\''affichage de l\\''édition de la page'',\n	optAnimateDetail:		''Vous permet d\\''activer et désactiver les déplacements animés des rangées. Désactiver cette option peut faire gagner en performance.'',\n	optAnimate:				''Déplacements animés des rangées'',\n	optMoveDetail:			''Vous permet d\\''activer et désactiver le scrolling vertical de la page pour suivre la rangée active. Désactiver cette option peut faire gagner en performance.'',\n	optMove:				''Scroll de la fenêtre'',\n	loading:				''Chargement ...'',\n	add:					''Ajouter'',\n	delDraft:				''Supprimer le contenu'',\n	delDraftDetail:			''Supprimer le contenu actuel. Le contenu reviendra au précédent contenu validé ou en attente de validation. Cette action n\\''est pas soumise à validation et prend effet immédiatement.'',\n	SubmitToValid:			''Soumettre à validation'',\n	SubmitToValidDetail:	''Soumettre l\\''état actuel de la page à la validation. Une fois validée, la page présentera ce contenu en ligne.'',\n	//File upload\n	browse:					''Parcourir ...'',\n	cancel:					''Annuler'',\n	byte:					''o'',\n	max:					''Max'',\n	min:					''Min'',\n	init:					''Initialisation ...'',\n	queueLimit:				''Vous avez dépassé le nombre de fichier possible.'',\n	zeroByte:				''Le fichier que vous tentez d\\''envoyer est vide.'',\n	tooBig:					''Le fichier que vous tentez d\\''envoyer est trop volumineux ({0} Mo). Vous ne devez pas dépasser {1} Mo'',\n	invalidType:			''Le type de fichier que vous tentez d\\''envoyer n\\''est pas autorisé.'',\n	sendingCancelled:		''Envoi sur le serveur annulé.'',\n	sendingStopped:			''Envoi sur le serveur interrompu.'',\n	sizeLimit:				''Limite d\\''envoi sur le serveur atteinte.'',\n	uploadError:			''Erreur durant l\\''envoi du fichier au serveur. Peut-être est il trop volumineux ? Vous ne devez pas dépasser {0} Mo.'',\n	treatmentError:			''Erreur de traitement du fichier sur le serveur.'',\n	securityError:			''Erreur de sécurité : le type de fichier que vous envoyez n\\''est pas autorisé.'',\n	unknownError:			''Erreur d\\''envoi du fichier ... '',\n	pleaseWait:				''Veuillez patienter, transfert en cours ...'',\n	browserError:			''Votre navigateur ne peut gérer ce script.'',\n	removeFile:				''Supprimer le fichier actuel'',\n	//Image upload\n	clickOriginal:			''Cliquez pour voir en format original.'',\n	maxImageSize:			''L\\''image dépasse les limites de taille autorisées. Veuillez la redimensionner ou la modifier.'',\n	maxImageHW:			''L\\''image dépasse les dimensions autorisées.'',\n	clickToClose:			''Cliquez pour fermer la prévisualisation.'',\n	resize:					''Redimensionner'',\n	help:					''Aide'',\n	resizeHelp:				''Vous pouvez redimensionner l\\''image et la recadrer. Attention à respecter les limites de dimensions si il y en a. Lorsque vous cliquez sur "Appliquer", l\\''image sera transformée sur le serveur et vous ne pourrez pas revenir à l\\''image originale.'',\n	width:					''Largeur'',\n	height:					''Hauteur'',\n	crop:					''Recadrer'',\n	apply:					''Appliquer'',\n	removeImage:			''Supprimer l\\''image actuelle'',\n	updateImage:			''Modifier (redimensionner - retailler) l\\''image actuelle'',\n	autoUpdateImage:			''Redimensionner automatiquement l\\''image actuelle'',\n	//Pages field\n	select:					''Sélectionner ...'',\n	//Link field\n	none:					''Aucun'',\n	title:					''Titre'',\n	internalLink:			''Lien Interne (vers une page du site)'',\n	externalLink:			''Lien Externe (vers un autre site)'',\n	fileLink:				''Lien vers un Fichier'',\n	type:					''Type'',\n	page:					''Page'',\n	externalLinkHelp:		''Saisissez ici l\\''adresse du lien en commençant par http://'',\n	url:					''URL'',\n	file:					''Fichier'',\n	destination:			''Destination'',\n	currentWindow:			''Dans la fenêtre en cours'',\n	newWindow:				''Dans une nouvelle fenêtre'',\n	popupWindow:			''Dans une fenêtre Pop-up'',\n	//framepanel\n	submitDraftConfirm:		''Voulez vous soumettre le contenu actuel de la page à la validation ?'',\n	validateDraft:			''Publier ce contenu'',\n	validateDraftDetail:	''Valider l\\''état actuel du contenu de la page. La page présentera ce contenu en ligne sans étape intermédiaire de validation.'',\n	validateDraftConfirm:	''Voulez vous valider le contenu actuel de la page ? Son contenu sera directement mis en ligne sans étape intermédiaire de validation.'',\n	previzDraft:			''Aperçu'',\n	previzDraftDetail:		''Aperçu de votre contenu en cours de modification.'',\n	//edit\n	endEdition:				''Vous quittez l\\''édition de la page. Voulez vous soumettre le contenu actuel de la page à la validation ?'',\n	quitConfirm:			''Vous allez perdre les modifications en cours qui n\\''ont pas été sauvegardées.'',\n	refresh:				''Rafraichissement de la page ...'',\n	formSubmit:				''Validation d\\''un formulaire'',\n	formSubmitDesc:			''Attention, vous allez valider un formulaire. Le résultat sera ouvert dans une nouvelle fenêtre.''\n};\n//Change default field label separator\nif(Ext.layout.FormLayout) {\n	Ext.layout.FormLayout.prototype.labelSeparator = ''&nbsp;:'';\n}');
+INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1547, 'standard', 'fr', 'Automne.locales = {\n	openPopup: 		''Ouvrir cette fenêtre dans une pop-up'',\n	closePopup: 		''La fenêtre principale d\\''Automne est fermée ... Merci de fermer cette fenêtre.'',\n	validateOptions: 		''Voir les options de validation'',\n	validate: 				''Valider'',\n	actionImpossible: 		''Action impossible'',\n	cantSubmitFormPage: 	''Vous ne pouvez pas soumettre un formulaire depuis une page non publique.'',\n	loadingError: 			''Erreur de chargement. Veuillez réessayer ou vous reconnecter ...'',\n	jsError: 				''Erreur de traitement Javascript. Veuillez réessayer ou vous reconnecter ...'',\n	jsonError: 				''Erreur de traitement JSon. Veuillez réessayer ou vous reconnecter ...'',\n	contactAdministrator:	''Si le problème persiste, veuillez contacter votre administrateur avec ces informations : '',\n	cannotCloseModalGroup: 	''Vous ne pouvez pas fermer cette fenêtre tant que des fenêtres dépendantes sont ouvertes. Veuillez les fermer d\\''abord.'',\n	noPageFounded: 			''Aucune page trouvée ...'',\n	noScript: 				''Aucun script en cours de traitement.'',\n	nScripts: 				''{0} scripts en cours de traitement.'',\n	//Page edition \n	rowDel:					''Supprimer cette rangée'',\n	rowDrag:				''Glisser-Déposer cette rangée'',\n	rowTop:					''Monter cette rangée en haut de la zone éditable'',\n	rowBottom:				''Descendre cette rangée en bas de la zone éditable'',\n	rowLeft:				''Passer cette rangée dans la zone éditable de gauche'',\n	rowRight:				''Passer cette rangée dans la zone éditable de droite'',\n	rowUp:					''Monter cette rangée d\\''un cran'',\n	rowDown:				''Descendre cette rangée d\\''un cran'',\n	csName:					''Zone de contenu :'',\n	rowType:				''Rangée de type : '',\n	newRow:					''Nouvelle Rangée'',\n	newRowTip:				''Ajouter une nouvelle rangée de contenu dans la page'',\n	blockDel:				''Supprimer le contenu de ce bloc.'',\n	blockModify:			''Modifier le contenu de ce bloc.'',\n	blockAdmin:				''Gérer les éléments employés par ce bloc de contenu.'',\n	blockValidate:			''Enregistrer le contenu'',\n	rowDeleteConfirm:		''Etes-vous sur de vouloir supprimer définitivement la rangée \\''{0}\\'' et tout son contenu ?'',\n	blockDeleteConfirm:		''Etes-vous sur de vouloir supprimer définitivement tout le contenu de ce bloc ?'',\n	csSelectRowAdd:			''Sélectionnez la rangée à ajouter : '',\n	csSelectRow:			''Sélectionnez ou recherchez la rangée ...'',\n	csClickToAdd:			''Cliquez pour ajouter une nouvelle rangée à cette position'',\n	csClickOnRed:			''Cliquez sur la zone rouge où vous souhaitez ajouter votre nouvelle rangée.'',\n	csCancelRowAdd:			''Annuler l\\''ajout d\\''une nouvelle rangée dans la page.'',\n	csAddRowToPosition:		''Ajouter la rangée sélectionnée à la position choisie dans la page.'',\n	options:				''Options'',\n	optionsDetail:			''Vous permet de controler les options d\\''affichage de l\\''édition de la page'',\n	optAnimateDetail:		''Vous permet d\\''activer et désactiver les déplacements animés des rangées. Désactiver cette option peut faire gagner en performance.'',\n	optAnimate:				''Déplacements animés des rangées'',\n	optMoveDetail:			''Vous permet d\\''activer et désactiver le scrolling vertical de la page pour suivre la rangée active. Désactiver cette option peut faire gagner en performance.'',\n	optMove:				''Scroll de la fenêtre'',\n	loading:				''Chargement ...'',\n	add:					''Ajouter'',\n	delDraft:				''Supprimer le contenu'',\n	delDraftDetail:			''Supprimer le contenu actuel. Le contenu reviendra au précédent contenu validé ou en attente de validation. Cette action n\\''est pas soumise à validation et prend effet immédiatement.'',\n	SubmitToValid:			''Soumettre à validation'',\n	SubmitToValidDetail:	''Soumettre l\\''état actuel de la page à la validation. Une fois validée, la page présentera ce contenu en ligne.'',\n	//File upload\n	browse:					''Parcourir ...'',\n	cancel:					''Annuler'',\n	byte:					''o'',\n	max:					''Max'',\n	min:					''Min'',\n	init:					''Initialisation ...'',\n	queueLimit:				''Vous avez dépassé le nombre de fichier possible.'',\n	zeroByte:				''Le fichier que vous tentez d\\''envoyer est vide.'',\n	tooBig:					''Le fichier que vous tentez d\\''envoyer est trop volumineux ({0} Mo). Vous ne devez pas dépasser {1} Mo'',\n	invalidType:			''Le type de fichier que vous tentez d\\''envoyer n\\''est pas autorisé.'',\n	sendingCancelled:		''Envoi sur le serveur annulé.'',\n	sendingStopped:			''Envoi sur le serveur interrompu.'',\n	sizeLimit:				''Limite d\\''envoi sur le serveur atteinte.'',\n	uploadError:			''Erreur durant l\\''envoi du fichier au serveur. Peut-être est il trop volumineux ? Vous ne devez pas dépasser {0} Mo.'',\n	treatmentError:			''Erreur de traitement du fichier sur le serveur.'',\n	securityError:			''Erreur de sécurité : le type de fichier que vous envoyez n\\''est pas autorisé.'',\n	unknownError:			''Erreur d\\''envoi du fichier ... '',\n	pleaseWait:				''Veuillez patienter, transfert en cours ...'',\n	browserError:			''Votre navigateur ne peut gérer ce script.'',\n	removeFile:				''Supprimer le fichier actuel'',\n	//Image upload\n	clickOriginal:			''Cliquez pour voir en format original.'',\n	maxImageSize:			''L\\''image dépasse les limites de taille autorisées. Veuillez la redimensionner ou la modifier.'',\n	maxImageHW:			''L\\''image dépasse les dimensions autorisées.'',\n	clickToClose:			''Cliquez pour fermer la prévisualisation.'',\n	resize:					''Redimensionner'',\n	help:					''Aide'',\n	resizeHelp:				''Vous pouvez redimensionner l\\''image et la recadrer. Attention à respecter les limites de dimensions si il y en a. Lorsque vous cliquez sur "Appliquer", l\\''image sera transformée sur le serveur et vous ne pourrez pas revenir à l\\''image originale.'',\n	width:					''Largeur'',\n	height:					''Hauteur'',\n	crop:					''Recadrer'',\n	apply:					''Appliquer'',\n	removeImage:			''Supprimer l\\''image actuelle'',\n	updateImage:			''Modifier (redimensionner - retailler) l\\''image actuelle'',\n	autoUpdateImage:			''Redimensionner automatiquement l\\''image actuelle'',\n	//Pages field\n	select:					''Sélectionner ...'',\n	//Link field\n	none:					''Aucun'',\n	title:					''Titre'',\n	internalLink:			''Lien Interne (vers une page du site)'',\n	externalLink:			''Lien Externe (vers un autre site)'',\n	fileLink:				''Lien vers un Fichier'',\n	type:					''Type'',\n	page:					''Page'',\n	externalLinkHelp:		''Saisissez ici l\\''adresse du lien en commençant par http://'',\n	url:					''URL'',\n	file:					''Fichier'',\n	destination:			''Destination'',\n	currentWindow:			''Dans la fenêtre en cours'',\n	newWindow:				''Dans une nouvelle fenêtre'',\n	popupWindow:			''Dans une fenêtre Pop-up'',\n	//framepanel\n	submitDraftConfirm:		''Voulez vous soumettre le contenu actuel de la page à la validation ?'',\n	validateDraft:			''Publier ce contenu'',\n	validateDraftDetail:	''Valider l\\''état actuel du contenu de la page. La page présentera ce contenu en ligne sans étape intermédiaire de validation.'',\n	validateDraftConfirm:	''Voulez vous valider le contenu actuel de la page ? Son contenu sera directement mis en ligne sans étape intermédiaire de validation.'',\n	previzDraft:			''Aperçu'',\n	previzDraftDetail:		''Aperçu de votre contenu en cours de modification.'',\n	//edit\n	endEdition:				''Vous quittez l\\''édition de la page. Voulez vous soumettre le contenu actuel de la page à la validation ?'',\n	quitConfirm:			''Vous allez perdre les modifications en cours qui n\\''ont pas été sauvegardées.'',\n	refresh:				''Rafraichissement de la page ...'',\n	formSubmit:				''Validation d\\''un formulaire'',\n	formSubmitDesc:			''Attention, vous allez valider un formulaire. Le résultat sera ouvert dans une nouvelle fenêtre.''\n};\n//Change default field label separator\nif(Ext.layout.FormLayout) {\n	Ext.layout.FormLayout.prototype.labelSeparator = ''&nbsp;:'';\n}');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1548, 'standard', 'fr', 'Enregistrer et régénérer');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1549, 'standard', 'fr', 'Enregistrer la définition XML et régénérer toutes les pages qui emploient cette rangée pour une application directe des modifications sur le ou les sites.');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1550, 'standard', 'fr', 'Enregistrer la définition XML et régénérer toutes les pages qui emploient ce modèle pour une application directe des modifications sur le ou les sites.');
